--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
