--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
@@ -24,7 +26,6 @@
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
